# rust_axum_reddit

./: Cargo.toml
migrations/: 20250413194940_create_initial_tables.sql  20250414053434_add_posts.sql  20250414054042_add_comments_and_votes.sql
src/: app_state.rs  config.rs  errors.rs  main.rs
src/models/: auth.rs  user.rs
src/utils/: jwt.rs  password.rs
